1. Added steps fragment 2. added different layout for recipe home fragment for landscape mode 3. added saveinstancestate for homeactivity

--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -17,6 +17,7 @@
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="2dp"
         app:cardElevation="5dp"
+        app:cardUseCompatPadding="true"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
