1. added expresso test case 2. improved UI

--- a/app/src/main/res/layout/fragment_individual_step.xml
+++ b/app/src/main/res/layout/fragment_individual_step.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,7 +32,13 @@
             android:layout_marginRight="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:layout_weight="3">
+            android:layout_weight="3"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="#4ffcd064"
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="true">
 
             <TextView
                 android:id="@+id/fis_step_description_id"
