--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="120dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/recipe_card_view_id"
@@ -16,16 +16,15 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="#4ffcd064"
         app:cardCornerRadius="2dp"
         app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/ir_recipe_title_id"
@@ -41,22 +40,25 @@
 
             <ImageView
                 android:id="@+id/ir_recipe_icon_id"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:layout_margin="5dp"
+                android:src="@drawable/serve_icon" />
 
             <TextView
                 android:id="@+id/ir_recipe_ingredients_count_text_view_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/ir_recipe_title_id"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="serif"
                 android:text="@string/ingredients_title"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
